content/docs/2.0.9/2-api/4-row.mdx
---
posttype: "docs"
title: Row
metaTitle: "Row interface"
metaDescription: "metaDescription"
---

Row interface contains two necessary properties: `rowId` and `cells`.

## Definition

```tsx
interface Row {
    readonly rowId: Id;
    readonly cells: Cell[];
    readonly height?: number;
    readonly reorderable?: boolean;
}
```

## Properties

| Property name     | Type                      | Property description  | 
| ------------      | -------------             | -------------         |
| `rowId`           | [`Id`](link)              | Unique [`Id`](link) in all rows array | 
| `cells`           | [`Cell`](link)`[]`        | Array of `Cell` objects | 
| `height?`         | `number`                  | Height of each grid row (defaultly set to 25px)  | 
| `reorderable?`    | `boolean`                 | Property that allow row to change it's position in grid, default: `false` (row reorder implementation is on the developer side) |  