content/docs/2.0.30/2-api/4-row.mdx
---
posttype: "docs"
title: Row
metaTitle: "Row interface"
metaDescription: "metaDescription"
---

Row interface contains only two necessary properties: `rowId` and `cells`.
It's essential to create any grid.

| Property name     | Type          | Property description  | 
| ------------      | ------------- | -------------         |
| `rowId`           | [`Id`](link)                                                                  | Unique id in all rows array | 
| `cells`           | [`Cell`](link)`[]`                                                            | Array of `Cell` objects | 
| `height?`         | `number`                                                                      | Height of each grid row (defaultly set to 25px)  | 
| `reorderable?`    | `boolean`                                                                     | Property that allow row to change it's position in grid, default: `false` (row reorder implementation is on the developer side) |  
| `canDrop?`        | `(rowIds: `[`Id`](link)`[], position: `[`DropPosition`](link)`) => boolean`   | Callback called to check possibility to drop row on new position | 
| `onDrop?`         | `(rowIds: `[`Id`](link)`[], position: `[`DropPosition`](link)`) => void`      | Event called when rows are dropped in new position | 